# LLM-Agent_Eval

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_eval/agents/rag/: __init__.py  agent.py  flow.flex.yaml
src/llm_eval/agents/rag/.promptflow/: flow.json
src/llm_eval/core/: __init__.py  config.py  model.py  search.py  session.py  tracing.py
src/llm_eval/evaluation/: metrics.py  runner.py
src/llm_eval/ingestion/: chunking.py
src/llm_eval/orchestrator/: orchestrator.py
src/llm_eval/variants/: generator.py  prompt_generator.py
